--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,6 +33,28 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+
+             <p>Durante os meus 3 anos cursando engenharia mecânica, tive a oportunidade de colocar meus conhecimentos em prática
+                desenvolvendo alguns projetos integradores: um braço hidráulico, um resfriador de água e um guindaste aranha.
+            </p>
+            
+            <h2>Braço Hidráulico</h2>
+            <p>O objetivo desse projeto era construir um braço hidráulico movido por seringas de água, com rotação de 360°, 
+                e movimentos de cima para baixo. Com intuito de levantar um cubo de madeira e colocar em uma caixa com o menor tempo, 
+                o que resultou em uma conpetição entre os grupos. O meu grupo ganhou em 2º Lugar.
+            </p>
+
+            <h2>Resfriador de água</h2>
+            <p>Nesse projeto o desafio foi construir um sistema de resfriamento de água. O objetivo era colocar a água em temperatura 
+                ambiente de um lado e ela sair -10° da temperatura que entrou instantaneamente, sem uso de reservatorio.
+            </p>
+
+            <h2>Guindaste aranha</h2>
+            <p>Dentre os outros projetos esse foi o mais complexo. Dessa vez o desafio era construir um guindaste aranha 
+                com pernas dobraveis, rotação de 360°, movimentos verticas, executado por um controle programado. 
+            </p>
+
+        
         </main>
     </div>
 
