Atualização do Index

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,19 +39,28 @@
             </p>
             
             <h2>Braço Hidráulico</h2>
-            <p>O objetivo desse projeto era construir um braço hidráulico movido por seringas de água, com rotação de 360°, 
+            <p> O objetivo desse projeto era construir um braço hidráulico movido por seringas de água, com rotação de 360°, 
                 e movimentos de cima para baixo. Com intuito de levantar um cubo de madeira e colocar em uma caixa com o menor tempo, 
                 o que resultou em uma conpetição entre os grupos. O meu grupo ganhou em 2º Lugar.
+                itens usados no projeto: Polietileno, seringas com água, parafusos, chapas de aço, mangueiras e madeira.
             </p>
 
             <h2>Resfriador de água</h2>
             <p>Nesse projeto o desafio foi construir um sistema de resfriamento de água. O objetivo era colocar a água em temperatura 
-                ambiente de um lado e ela sair -10° da temperatura que entrou instantaneamente, sem uso de reservatorio.
-            </p>
+               ambiente de um lado e ela sair -10° da temperatura que entrou instantaneamente, sem uso de reservatorio.
+               itens usados no projeto: Pastilha Peltier, Dissipador, Cooler , Parafusos com bucha, pasta térmica, isolador termico,
+               fita isolante, chapas de aço, fonte e carregador de notebook.
+</p>
+
 
             <h2>Guindaste aranha</h2>
-            <p>Dentre os outros projetos esse foi o mais complexo. Dessa vez o desafio era construir um guindaste aranha 
-                com pernas dobraveis, rotação de 360°, movimentos verticas, executado por um controle programado. 
+            <p> Dentre os outros projetos esse foi o mais complexo. Dessa vez o desafio era construir um guindaste aranha 
+                com pernas dobráveis, rotação de 360°, movimentos verticais, executado por um controle programado. 
+                Objetivo era virar 180° com um peso de 5kg sem tombar, a dificuldade maior era executar esse trajeto
+                sem tombar o guindaste, por isso usamos um contra peso de 4kg na base, com isso conseguimos executar o percurso.
+                itens usados no projeto: soldas tig, chapas e tubos de aço, rolamento, máquina e controle de vidro elétrico, 
+                fios, botão de emergência, botão de led e fitas, motor com redução, rodinhas, conduite e botão liga e desliga.
+            
             </p>
 
         
